Fixing horizontal scrolls on animating divs

--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -13,7 +13,8 @@
         background-repeat: no-repeat;
         background-position: center;
         width: 100%;
-        margin-bottom: 100px; 
+        margin-bottom: 100px;
+        padding-top: 130px;
         @media (max-width: $screen-md) {
             background-image: none;
             margin-bottom: 0; 
@@ -46,7 +47,6 @@
             border: 1px solid #787878;
             background-color: $black;
             position: relative;
-            top: 80px;
             margin-top: 30px;
             @media (max-width: $screen-md) {
                 top: 0;
